feat: Enhance README and permissions documentation; add tablist command permissions and improve configuration examples